Loading individual components lazily

--- a/hooli-portal/apps/shell/tsconfig.app.json
+++ b/hooli-portal/apps/shell/tsconfig.app.json
@@ -37,6 +37,9 @@
     },
     {
       "path": "../hr/tsconfig.app.json"
+    },
+    {
+      "path": "../../libs/uicomponents/tsconfig.lib.json"
     }
   ]
 }
