--- a/hooli-portal/apps/shell/tsconfig.json
+++ b/hooli-portal/apps/shell/tsconfig.json
@@ -9,6 +9,9 @@
       "path": "../hr"
     },
     {
+      "path": "../../libs/uicomponents"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
