--- a/hooli-portal/nx.json
+++ b/hooli-portal/nx.json
@@ -5,7 +5,10 @@
     "applyChanges": true
   },
   "namedInputs": {
-    "default": ["{projectRoot}/**/*", "sharedGlobals"],
+    "default": [
+      "{projectRoot}/**/*",
+      "sharedGlobals"
+    ],
     "production": [
       "default",
       "!{projectRoot}/.eslintrc.json",
@@ -68,7 +71,9 @@
   "targetDefaults": {
     "build": {
       "cache": true,
-      "dependsOn": ["^build"]
+      "dependsOn": [
+        "^build"
+      ]
     },
     "@nx/eslint:lint": {
       "cache": true,
@@ -81,11 +86,18 @@
     },
     "e2e": {
       "cache": true,
-      "inputs": ["default", "^production"]
+      "inputs": [
+        "default",
+        "^production"
+      ]
     },
     "@nx/jest:jest": {
       "cache": true,
-      "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
+      "inputs": [
+        "default",
+        "^production",
+        "{workspaceRoot}/jest.preset.js"
+      ],
       "options": {
         "passWithNoTests": true
       },
@@ -97,7 +109,11 @@
       }
     },
     "test": {
-      "dependsOn": ["^build", "^build", "^build"]
+      "dependsOn": [
+        "^build",
+        "^build",
+        "^build"
+      ]
     },
     "@nx/rspack:rspack": {
       "inputs": [
@@ -107,7 +123,9 @@
           "env": "NX_MF_DEV_REMOTES"
         }
       ],
-      "dependsOn": ["^build"],
+      "dependsOn": [
+        "^build"
+      ],
       "cache": true
     }
   },
