--- a/hooli-portal/apps/hr/tsconfig.json
+++ b/hooli-portal/apps/hr/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/uicomponents"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
