--- a/hooli-engineering/package.json
+++ b/hooli-engineering/package.json
@@ -13,13 +13,15 @@
     "@fluentui/react-components": "^9.61.5",
     "@fluentui/react-icons": "^2.0.292",
     "@hooli-portal/uicomponents": "0.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@module-federation/vite": "^1.2.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "wouter": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
