--- a/hooli-portal/nx.json
+++ b/hooli-portal/nx.json
@@ -5,10 +5,7 @@
     "applyChanges": true
   },
   "namedInputs": {
-    "default": [
-      "{projectRoot}/**/*",
-      "sharedGlobals"
-    ],
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
       "default",
       "!{projectRoot}/.eslintrc.json",
@@ -66,14 +63,18 @@
         "buildDepsTargetName": "build-deps",
         "watchDepsTargetName": "watch-deps"
       }
+    },
+    {
+      "plugin": "@nx/playwright/plugin",
+      "options": {
+        "targetName": "playwright:e2e"
+      }
     }
   ],
   "targetDefaults": {
     "build": {
       "cache": true,
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     },
     "@nx/eslint:lint": {
       "cache": true,
@@ -86,18 +87,11 @@
     },
     "e2e": {
       "cache": true,
-      "inputs": [
-        "default",
-        "^production"
-      ]
+      "inputs": ["default", "^production"]
     },
     "@nx/jest:jest": {
       "cache": true,
-      "inputs": [
-        "default",
-        "^production",
-        "{workspaceRoot}/jest.preset.js"
-      ],
+      "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
       "options": {
         "passWithNoTests": true
       },
@@ -109,11 +103,7 @@
       }
     },
     "test": {
-      "dependsOn": [
-        "^build",
-        "^build",
-        "^build"
-      ]
+      "dependsOn": ["^build", "^build", "^build"]
     },
     "@nx/rspack:rspack": {
       "inputs": [
@@ -123,9 +113,7 @@
           "env": "NX_MF_DEV_REMOTES"
         }
       ],
-      "dependsOn": [
-        "^build"
-      ],
+      "dependsOn": ["^build"],
       "cache": true
     }
   },
