--- a/hooli-portal/apps/shell/vercel.json
+++ b/hooli-portal/apps/shell/vercel.json
@@ -1,8 +1,15 @@
 {
   "rewrites": [
+    { "source": "/remoteEntry.js", "destination": "/remoteEntry.js" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "headers": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/remoteEntry.js",
+      "headers": [
+        { "key": "Content-Type", "value": "application/javascript" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" }
+      ]
     }
   ]
 }
