--- a/hooli-portal/apps/hr/package.json
+++ b/hooli-portal/apps/hr/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@hooli-monorepo/hr",
+  "name": "@hooli-portal/hr",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@hooli-monorepo/uicomponents": "workspace:*"
+    "@hooli-portal/uicomponents": "workspace:*"
   },
   "scripts": {
     "build": "vite build",
