--- a/hooli-portal/package.json
+++ b/hooli-portal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hooli-monorepo/source",
+  "name": "@hooli-portal/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
