--- a/hooli-portal/apps/hr/package.json
+++ b/hooli-portal/apps/hr/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev": "vite"
   },
   "type": "module"
 }
